force-app/main/default/objects/SLA_Per_Owner__c/SLA_Per_Owner__c.object-meta.xml
<CustomObject>
    <label>Work Duration Per Owner</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Duration Per Owner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>