force-app/main/default/objects/SLA_Per_Owner__c/fields/Branch_Team_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Team_Name_Code__c</fullName>
    <formula>Link_User__r.RTL_Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch / Team Name (Code)</label>
    <type>Text</type>
</CustomField>