force-app/main/default/objects/SLA_Per_Owner__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Work Duration Per Owner</relationshipLabel>
    <relationshipName>SLA_Per_Owner</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>