force-app/main/default/objects/SLA_Per_Owner__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>