force-app/main/default/objects/SLA_Per_Owner__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <formula>Link_User__r.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee ID</label>
    <type>Text</type>
</CustomField>