force-app/main/default/objects/SLA_Per_Owner__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>