force-app/main/default/objects/SLA_Per_Owner__c/fields/Hop_Team__c.field-meta.xml
<CustomField>
    <fullName>Hop_Team__c</fullName>
    <label>Hop Team</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>SLA_By_Hop__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SLA_By_Hop__c</referenceTo>
    <relationshipLabel>Work Duration Per Owner</relationshipLabel>
    <relationshipName>Work_Duration_Per_Owner</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>