force-app/main/default/objects/SLA_Per_Owner__c/fields/Is_More_1_day__c.field-meta.xml
<CustomField>
    <fullName>Is_More_1_day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Start date and end date in the same day return 1 else return 0 (Calculate by trigger)</description>
    <label>Is More 1 day</label>
    <type>Checkbox</type>
</CustomField>