force-app/main/default/objects/SLA_Per_Owner__c/fields/Link_User__c.field-meta.xml
<CustomField>
    <fullName>Link_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SLA_Per_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>