force-app/main/default/objects/SLA_Per_Owner__c/fields/Number_of_Aging__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Aging__c</fullName>
    <description>Calculate by trigger</description>
    <label>Number of Aging</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>