force-app/main/default/objects/SLA_Per_Owner__c/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <formula>if(Channel__c = &apos;Branch&apos; ,Branch_Team_Name_Code__c ,Zone_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>