force-app/main/default/objects/SLA_Per_Owner__c/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>