force-app/main/default/objects/SLA_Per_Owner__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>