force-app/main/default/objects/SLA_Per_Owner__c/fields/Time_Used_Hour__c.field-meta.xml
<CustomField>
    <fullName>Time_Used_Hour__c</fullName>
    <formula>Time_Used_Day__c*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Used (Hour)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>