force-app/main/default/objects/SLA_Per_Owner__c/fields/Zone_Code_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code_Team_Code__c</fullName>
    <formula>Link_User__r.Zone_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Code / Team Code</label>
    <type>Text</type>
</CustomField>