force-app/main/default/objects/SLA_Per_Owner__c/fields/Zone_Team__c.field-meta.xml
<CustomField>
    <fullName>Zone_Team__c</fullName>
    <formula>if(Link_User__c = null,  Name ,Link_User__r.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone/Team</label>
    <type>Text</type>
</CustomField>